--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <h1>Titulo de la pagina</h1>
+    <h2>Cabecera</h2>
     <ul>
       <ol>Primero</ol>
       <ol>Segundo</ol>
